# edu-rover2-server

./: .gitignore  MANIFEST.in  README.md  requirements.txt  requirements_mockup.txt  run.py  setup.cfg  setup.py
.github/workflows/: pylint.yml  python-app.yml
edu-rover2/: server.py
pcb/EduRov-motherboard/: MotorController.sch  eduRov_motherboard.kicad_pcb  eduRov_motherboard.pro  eduRov_motherboard.sch
pyedurov2/: __init__.py  __main__.py
pyedurov2/edu_rover2_simtind.egg-info/: PKG-INFO
pyedurov2/hardware/: arduino.py
pyedurov2/pyedurov2_simtind.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
pyedurov2/server/: __init__.py  advertising.py  ioserver.py  webserver.py
pyedurov2/system/: __init__.py  pyedurov2.service
pyedurov2/web/scripts/: main.js
src/: __init__.py  __main__.py  pyedurov2.service
src/pyedurov2_simtind.egg-info/: SOURCES.txt  requires.txt  top_level.txt
src/server/: advertising.py
src/web/: index.html
