[metadata]
name = pyedurov2
version = 0.0.3
author = Simen August Tinderholt
author_email = simtind@gmail.com
description = Server package for Edu-ROV hardware v0.7
# long_description = file: README.md
# long_description_content_type = text/markdown
url = https://github.com/simtind/edu-rover2
project_urls =
    Bug Tracker = https://github.com/simtind/edu-rover2/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)

[options]
package_dir =
    = pyedurov2
packages = find:
python_requires = >=3.6
install_requires =
    pip >= 19.3

    picamera
    sense-hat

    pyserial-asyncio
    asyncio
    psutil
    websockets
    aiortc
    aiohttp
include_package_data=True

[options.packages.find]
where = pyedurov2

[options.entry_points]
console_scripts =
    pyedurov2 = pyedurov2:edurov_web
